apps/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.stadthagen.dev`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls:
    secretName: stadthagen-tls
